--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get_storage: ^2.0.3
   syncfusion_flutter_pdfviewer: ^20.2.46-beta
   fluttertoast: ^8.0.9
+  carousel_slider: ^4.1.1
+  image_picker: ^0.8.5+3
 
 
   # The following adds the Cupertino Icons font to your application.
